Attempt to fix issue where text won't wrap on flex children on ie11

--- a/src/main/frontend/styles/partials/_categories.scss
+++ b/src/main/frontend/styles/partials/_categories.scss
@@ -100,7 +100,7 @@ ol.categories li:last-child:after {
   }
 
   &__text {
-    flex-grow: 1;
+    flex: 1;
     display: flex;
     flex-direction: column;
   }
