--- a/src/main/frontend/styles/partials/_search-results.scss
+++ b/src/main/frontend/styles/partials/_search-results.scss
@@ -94,7 +94,7 @@
   }
 
   &__text {
-    flex-grow: 1;
+    flex: 1;
   }
 
   &__image {
